# openmp_cuda_example_project

./: CMakeLists.txt  README.md  lib.cpp  lib.cu  lib.hpp  main.cpp  omp_lib-config.cmake
consumer/: CMakeLists.txt
consumer/omp_lib/: Makefile  cmake_install.cmake  omp_test
fortran_test/: CMakeLists.txt
